# Breakout_Game_Qt_Cplusplus_QML

./: CMakeLists.txt  README.md
assets/: resources.qrc
qml/: CMakeLists.txt  EndGameOverlay.qml  EscapeMenuOverlay.qml  GameArea.qml  GameInput.qml  Main.qml  ScalingUtilities.js  TextOverlay.qml  UiScaler.qml
src/: CMakeLists.txt  ball_manager.cpp  ball_manager.h  bricks_manager.h  bricks_model.cpp  bricks_model.h  collision_common.h  controller.cpp  controller.h  error_utils.h  game.cpp  game.h  game_coordinator.cpp  game_coordinator.h  game_loop.cpp  game_loop.h  input_handler.cpp  input_handler.h  log_manager.h  main.cpp  model.cpp  model.h  overlay_manager.cpp  qml_helper.h  sound_player.cpp  sound_player.h
src/asset_management/: asset_loader.cpp  asset_loader.h  asset_repository.h
src/brick_layouts/: brick_layout_library.cpp  brick_layout_library.h
src/collision_detection/: arena_edge_collision_detector.cpp  arena_edge_collision_detector.h  brick_collision_detector.cpp  brick_collision_detector.h  collision_detection_utils.h  paddle_collision_detector.cpp  paddle_collision_detector.h
src/collision_handling/: arena_edge_collision_handler.h  brick_collision_handler.h  paddle_collision_handler.h
src/config/: game_config.cpp  game_config.h
src/entities/: ball.h  brick.h  paddle.h
src/state_machine/: abstract_state.h  game_state_manager.h  game_state_type.h  i_state_actions.h
src/state_machine/states/: escape_menu_state.h  initialization_state.h  paused_for_debug_state.h  ready_to_start_state.h  running_state.h  stopped_lose_state.h  stopped_win_state.h
tests/: CMakeLists.txt
tests/src/: ball_test.cpp  bricks_manager_test.cpp  paddle_test.cpp  test_helper.h
tests/src/collision_detection/: arena_edge_collision_detector_test.cpp  brick_collision_detector_test.cpp  paddle_collision_detector_test.cpp
tests/src/collision_handling/: arena_edge_collision_handler_test.cpp  brick_collision_handler_test.cpp  paddle_collision_handler_test.cpp
